# bvolt-infra

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
grafana/dashboards/: bvolt.json  microgrid-integration-nodes.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: influxdb.yml
influxdb/init/: setup.sh
src/bvolt_infra/: config.py  core_client.py  main.py
src/bvolt_infra/static/: app.js  style.css
src/bvolt_infra/templates/: index.html
tests/: test_smoke.py
