[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bvolt-infra"
version = "0.1.0"
description = "Read-only dashboard/API that consumes bvolt-core endpoints."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bvolt_infra"]
